--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -37,8 +37,10 @@
     "expo-image-picker": "~8.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
