--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -15,8 +15,12 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "@ui-kitten/components": "next",
+    "@ui-kitten/eva-icons": "^4.4.1",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-document-picker": "~8.1.0",
+    "expo-file-system": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -31,10 +35,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-document-picker": "~8.1.0",
-    "expo-file-system": "~8.1.0",
-    "expo-image-picker": "~8.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
