--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -17,10 +17,12 @@
     "@ui-kitten/components": "next",
     "@ui-kitten/eva-icons": "^4.4.1",
     "axios": "^0.19.2",
+    "events": "^3.1.0",
     "expo": "~37.0.3",
     "expo-document-picker": "~8.1.0",
     "expo-file-system": "~8.1.0",
     "expo-image-picker": "~8.1.0",
+    "form-data": "^3.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
