--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -23,11 +23,13 @@
     "expo-file-system": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "form-data": "^3.0.0",
+    "moment": "^2.24.0",
     "qs": "^6.9.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-reanimated": "~1.7.0",
