--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -11,6 +11,7 @@
     "@eva-design/eva": "next",
     "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/material-top-tabs": "^5.1.8",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
