--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -42,7 +42,8 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "react-native-maps": "0.26.1"
+    "react-native-maps": "0.26.1",
+    "expo-constants": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
