--- a/ktemuan/package.json
+++ b/ktemuan/package.json
@@ -20,10 +20,12 @@
     "axios": "^0.19.2",
     "events": "^3.1.0",
     "expo": "~37.0.3",
+    "expo-constants": "~9.0.0",
     "expo-document-picker": "~8.1.0",
     "expo-file-system": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "form-data": "^3.0.0",
+    "lottie-react-native": "~2.6.1",
     "moment": "^2.24.0",
     "qs": "^6.9.3",
     "react": "~16.9.0",
@@ -32,6 +34,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-google-places-autocomplete": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-maps": "0.26.1",
     "react-native-modal-datetime-picker": "^8.5.4",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
@@ -41,9 +44,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-native-maps": "0.26.1",
-    "expo-constants": "~9.0.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
